<resources>
    <string name="app_name">MuviDb</string>
    <string name="popular">Popular</string>
    <string name="now_playing">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="themoviedb">TheMovieDb</string>
</resources>