<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.MuviDb"
    tools:context=".ui.feature.home.ui.HomeActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/lytHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/iv_menu"
                android:layout_alignBottom="@+id/iv_menu"
                android:layout_alignParentStart="true"
                android:gravity="center_vertical"
                android:textSize="24dp"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.App.TitleMedium"
                android:layout_marginStart="12dp"
                android:text="@string/themoviedb" />

            <ImageView
                android:id="@+id/iv_menu"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_baseline_menu" />

            <TextView
                android:id="@+id/tvPopular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:padding="10dp"
                android:layout_marginTop="24dp"
                android:layout_below="@id/iv_menu"
                android:text="@string/popular"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular_movie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPopular"
                android:minHeight="240dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/list_item_movie" />

            <TextView
                android:id="@+id/tvPlaying"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rv_popular_movie"
                android:fontFamily="serif"
                android:padding="10dp"
                android:text="@string/now_playing"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPlayingMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPlaying"
                android:minHeight="240dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/list_item_movie" />

            <TextView
                android:id="@+id/tvUpcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rvPlayingMovie"
                android:fontFamily="serif"
                android:padding="10dp"
                android:text="@string/up_coming"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvUpcomingMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvUpcoming"
                android:minHeight="240dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/list_item_movie" />

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>